# OpenMP-Optimization-for-MDR_CPU

./: README.md  run_script.sh
include/Decomposer/: MGARD.hpp
include/Reconstructor/: ComposedReconstructor.hpp
include/Refactor/: ComposedRefactor.hpp
test/: CMakeLists.txt  test_reconstructor.cpp  test_reconstructor_omp.cpp  test_refactor.cpp  test_refactor_omp.cpp
